[project]
name = "disseration-mcp-servers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.11.3",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "mcp[cli]>=1.13.0",
    "nbformat>=5.10.4",
    "netifaces>=0.11.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "polars>=1.32.3",
    "psutil>=7.0.0",
    "shodan>=1.31.0",
]
